--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="copyright" content="derechos reservados. Proibida su reproducción" />
     <meta name="description" content="Bienvenido a Chile" />
     <meta name="keyword"
-        content="viajes, destinos turisticos, chile, norte de chile, naturaleza, trackking, agencia de viajes" />
+        content="viajes, destinos turisticos, chile, norte de chile, naturaleza, trekgit king, agencia de viajes" />
     <link rel="shortcut icon" href="/asset/img/viajes.svg" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
         integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous" />
@@ -27,7 +27,7 @@
         <header class=" bg-info">
             <nav class="navbar container navbar-expand-sm  navbar-dark bg-info">
                 <a class="navbar-brand" href="#">
-                    <img src="assets/img/viajes.svg" height="40px" alt="">
+                    <img src="/assets/img/viajes.svg" height="40px" alt="imagen">
                 </a> <span class="text-white fs-2">VIAJES CHILE</span>
                 <button class="navbar-toggler d-lg-none" type="button" data-bs-toggle="collapse"
                     data-bs-target="#collapsibleNavId" aria-controls="collapsibleNavId" aria-expanded="false"
