--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="copyright" content="derechos reservados. Proibida su reproducción" />
     <meta name="description" content="Bienvenido a Chile" />
     <meta name="keyword"
-        content="viajes, destinos turisticos, chile, norte de chile, naturaleza, trekgit king, agencia de viajes" />
+        content="viajes, destinos turisticos, chile, norte de chile, naturaleza, trekking, agencia de viajes" />
     <link rel="shortcut icon" href="/asset/img/viajes.svg" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
         integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous" />
@@ -35,8 +35,7 @@
                 <div class="collapse navbar-collapse" id="collapsibleNavId">
                     <ul class="navbar-nav ms-auto me-5 mt-2 mt-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" href="#" aria-current="page">Inicio <span
-                                    class="visually-hidden">(actual)</span></a>
+                            <a class="nav-link active" href="#" aria-current="page">Inicio 
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#quienes">quienes somos</a>
