--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
                 <div class="collapse navbar-collapse" id="collapsibleNavId">
                     <ul class="navbar-nav ms-auto me-5 mt-2 mt-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" href="#" aria-current="page">Inicio 
+                            <a class="nav-link active" href="#" aria-current="page">Inicio <span
+                                    class="visually-hidden"></span></a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#quienes">quienes somos</a>
@@ -114,7 +115,7 @@
                             </div>
                         </div>
                     </div>
-        
+                </div>
                 </div>
             </section>
             <h2 class=" text-center">DESTACADOS</h2>
